  depending on the media currently playing
* The internal LAV Splitter will now be used by default to demux AviSynth scripts instead of using the old VFW interface.
  Note that AviSynth is still required even if LAV Splitter is used
* Cleaned up WebUI's Javascript code
* Updated SoundTouch to v1.8.0
* Updated Little CMS to v2.6 (git 40300b1)
* Updated Unrar to v5.1.1
* Updated LAV Filters to stable version 0.61.1:
    - LAV Audio: Improve error recovery on slightly corrupted audio streams
    - LAV Video: Fix a rare crash that could occur for high resolutions
    - LAV Video: Fix artifacts on some H264 streams with both software and DXVA decoding
    - LAV Splitter: Support ShoutCast metadata
    - LAV Video: Various improvements for DXVA support (native and copy-back)
    - LAV Splitter: Fix the opening of some Blu-ray discs which would take several minutes and could hang the player
    - Ticket #4035, LAV Video: Some frames were dropped when playing RealVideo files
    - Ticket #4057, LAV Splitter: Some WAV files were incorrectly detected as DTS
* Updated Armenian, Basque, Catalan, Simplified and Traditional Chinese, Czech, French, Galician, German, Greek,
  Hebrew, Hungarian, Italian, Japanese, Korean, Malay, Polish, Portuguese (Brazil), Romanian, Russian, Slovenian,
  Slovak, Spanish, Swedish, Turkish, Ukrainian and Vietnamese translations
! Properties dialog: Some tracks could have been missing from the streams list
! Fix incorrectly displayed OSD in case the message contained the character '&'. Also make top-left and
  top-right OSD size consistent and improve the behavior when the text is too big to be displayed entirely
! VMR-7 renderless: subtitles were not displayed except in fullscreen
! Ensure dynamic menus dependent on the currently playing media are updated when the media changes while a menu is opened
! DVB subtitles: Subtitles were sometimes only partially rendered with some parts disappearing immediately