@@ -719,7 +719,7 @@ Ztring File::Modified_Get()
             int Result=stat(File_Name.To_Local().c_str(), &Stat);
             if (Result<0)
                 return __T(""); //Error
-            Ztring Time; Time.Date_From_Seconds_1970(Stat.st_mtime);
+            Ztring Time; Time.Date_From_Seconds_1970((int64s)Stat.st_mtime);
             return Time;
         #elif defined WINDOWS
             FILETIME TimeFT;
